# mupen64plus-ae

./: .classpath  .cproject  .gitattributes  .gitignore  .gitmodules  .hgignore  .project  .project.init  .travis.yml  AndroidManifest.xml  ChangeLog  Glide64.workspace  INSTALL  LICENSES  Makefile  README  README.md  README.mupen64  RELEASE  ant.properties  build.gradle  build.xml  crashreport.txt  debug.txt  default.properties  diff-upstream.sh  gradle.properties  lint.xml  native_common.gradle  pauls_code_formatter.xml  project.properties  pull-translations-curl.sh  pull-translations-tx.sh  pull-translations.sh  push-source.sh  push-translations.sh  sensor_icon.odg  settings.gradle  todo!.txt
.externalToolBuilders/: NDK Builder.launch
.tx/: config
Glide64/: 3dmath.cpp  Combine.cpp  Config.h  Main.cpp  MiClWr32b.h  TexCache.cpp  TexLoad32b.h  TexLoad4b.h  rdp.cpp  rdp.h
GlideHQ/: TxTexCache.cpp  TxUtil.cpp
Glitch64/: Makefile.gcc  main.cpp
ae-bridge/: Android.mk  AndroidManifest.xml  Application.mk  build.gradle
app/: .gitignore  build.gradle  proguard-rules.pro
assets/: changelog.txt  gpl-license
build_common/: native_common.gradle  native_common.mk  version_common.gradle
captures/: org.mupen64plusae.v3.alpha_2017.05.29_00.51.li
core-debug/: .project  default.properties
data/: Glide64mk2.ini  InputAutoCfg.ini  RiceVideoLinux.ini  mupen64plus.desktop
doc/: GameActivity.ucls  InputArchitecture.ucls  mupen64plus.6  style-guidelines.txt
gltest/: framebuffmsvc.dsw  glTest.cpp  gltest.h  resource.h
jni/: Android.mk  Application.mk  mupen64plus-core.mk  mupen64plus-ui-console.mk  mupen64plus-video-angrylion.mk  mupen64plus-video-glide2gl.mk  mupen64plus-video-glide64mk2.mk  mupen64plus-video-gliden64.mk  mupen64plus-video-glidenhq.mk
junrar-release/: build.gradle  junrar-release.aar
libs/: acra-4.5.0.jar.properties  acra-dev-4d15be32.jar.properties  guava-r09.jar.properties  ouya-sdk.jar.dummy  ouya-sdk.jar.properties
main/: AndroidManifest.xml  ant.properties  build.xml  swaplibs  swaplibs.bat
miniupnp-bridge/: AndroidManifest.xml  CMakeLists.txt  build.gradle
miniupnp-bridge/src/: PortManager.cpp  PortManager.h  PortManagerNatPmp.cpp  PortManagerNatPmp.h
mupen64plus-audio-android/: AndroidManifest.xml  CMakeLists.txt  build.gradle
mupen64plus-audio-sles/: Android.mk  AndroidManifest.xml  Application.mk  CMakeLists.txt  build.gradle
mupen64plus-audio-sles/src/: Android.mk  main.cpp  main.h
mupen64plus-core/: .gitignore  Android.mk  AndroidManifest.xml  build.gradle  mupen64plus-core.mk
mupen64plus-input-android/: Android.mk  AndroidManifest.xml  Application.mk  build.gradle
mupen64plus-input-raphnet/: Android.mk  AndroidManifest.xml
mupen64plus-rsp-cxd4/: Android.mk  AndroidManifest.xml  mupen64plus-rsp-cxd4.mk
mupen64plus-rsp-hle/: .gitignore  Android.mk  AndroidManifest.xml  mupen64plus-rsp-hle.mk
mupen64plus-rsp-parallel/: .gitignore  AndroidManifest.xml  build.gradle
mupen64plus-ui-console/: Android.mk  AndroidManifest.xml  mupen64plus-ui-console.mk
mupen64plus-video-angrylion/: Android.mk  (+2 more)
mupen64plus-video-angrylion-plus/: Android.mk  Application.mk  build.gradle  gles_screen.c  mupen64plus-video-angrylion-plus.mk
mupen64plus-video-angrylion-plus/upstream/: .gitignore  .gitrepo  CMakeLists.txt  CREDITS.txt  MAME License.txt  README.md  make_version.py  mupen64plus-video-angrylion-plus.mk
mupen64plus-video-angrylion-plus/upstream/android/: mupen64plus-video-angrylion-plus.mk
mupen64plus-video-angrylion-plus/upstream/core/: common.h  core.vcxproj  parallel.cpp  parallel.h
mupen64plus-video-angrylion-plus/upstream/core/rdp/: blender.c  combiner.c  coverage.c  vi.c  zbuffer.c
mupen64plus-video-angrylion-plus/upstream/core/rdp/tex/: tcoord.c  tmem.c
mupen64plus-video-angrylion-plus/upstream/core/rdp/vi/: restore.c  video.c
mupen64plus-video-angrylion-plus/upstream/msvc/: angrylion-plus.sln  core.vcxproj  core.vcxproj.filters  plugin-common.vcxproj  plugin-common.vcxproj.filters  plugin-mupen64plus.vcxproj  plugin-mupen64plus.vcxproj.filters  plugin-zilmar.vcxproj  plugin-zilmar.vcxproj.filters
mupen64plus-video-angrylion-plus/upstream/plugin-common/: gl_screen.c  gl_screen.h  gles_screen.c  plugin-common.vcxproj.filters
mupen64plus-video-angrylion-plus/upstream/plugin-mupen64plus/: gfx_m64p.c  screen.c
mupen64plus-video-angrylion-plus/upstream/plugin-zilmar/: config.c  gfx_1.3.c  plugin-zilmar.vcxproj.filters  screen.c  wgl_ext.c
mupen64plus-video-angrylion-plus/upstream/src/core/: common.h  gl_core_3_3.c  n64video.c  n64video.h  parallel.cpp  parallel.h  rdp.c  screen.h  vdac.c  vdac.h
mupen64plus-video-angrylion-plus/upstream/src/core/n64video/: rdp.c  vi.c
mupen64plus-video-angrylion-plus/upstream/src/core/n64video/rdp/: blender.c  combiner.c  coverage.c  dither.c  fbuffer.c  rasterizer.c  rdram.c  tcoord.c  tex.c  tmem.c  zbuffer.c
mupen64plus-video-angrylion-plus/upstream/src/core/n64video/vi/: divot.c  fetch.c  gamma.c  lerp.c
mupen64plus-video-angrylion-plus/upstream/src/core/rdp/: blender.c  cmd.c  combiner.c  coverage.c  rasterizer.c  rdram.c  vi.c  zbuffer.c
mupen64plus-video-angrylion-plus/upstream/src/core/rdp/tex/: tmem.c
mupen64plus-video-angrylion-plus/upstream/src/core/rdp/vi/: fetch.c  gamma.c  lerp.c
mupen64plus-video-angrylion-plus/upstream/src/output/: gl_core_3_3.c  screen.h
mupen64plus-video-angrylion-plus/upstream/src/plugin/common/: gl_screen.c
mupen64plus-video-angrylion-plus/upstream/src/plugin/common/gl_core_3_3/: gl_core_3_3.c
mupen64plus-video-angrylion-plus/upstream/src/plugin/mupen64plus/: gfx_m64p.c  screen.c
mupen64plus-video-angrylion-plus/upstream/src/plugin/mupen64plus/api/: m64p_common.h  m64p_plugin.h  m64p_types.h  m64p_vidext.h
mupen64plus-video-angrylion-plus/upstream/src/plugin/zilmar/: config.c  gfx_1.3.c  screen.c  wgl_ext.c
mupen64plus-video-angrylion-rdp-plus/: Android.mk  AndroidManifest.xml  mupen64plus-video-angrylion-rdp-plus.mk
ndkLibs/libnatpmp/: .travis.yml  CMakeLists.txt  Makefile  natpmp.c  natpmpc.c  setup.py
(+4384 files in other folders)
